Alignment issue fixed for desktop view

--- a/packages/mihy-ui-covid19-frontend/src/ui-containers/SwiperComponent/index.css
+++ b/packages/mihy-ui-covid19-frontend/src/ui-containers/SwiperComponent/index.css
@@ -17,7 +17,7 @@ body {
   left: 50%;
   top: 30%;
   margin-left: -150px;
-  margin-top: -150px;
+  margin-top: -72px;
 }
 .swiper-slide {
   background-position: center;
